--- a/src/main/resources/templates/request-calculate-form.html
+++ b/src/main/resources/templates/request-calculate-form.html
@@ -7,10 +7,10 @@
 </head>
 <body>
     <form th:action="@{/requestCalculate/input2}" method="post">
-     <input type="text" name="num1">+<input type="text" name="num2">=<br>
-     <input type="text" name="num3">‐<input type="text" name="num4">=<br>
-     <input type="text" name="num5">×<input type="text" name="num6">=<br>
-     <input type="text" name="num7">÷<input type="text" name="num8">=<br>
+     <input type="text" name="num1"> + <input type="text" name="num2">=<br>
+     <input type="text" name="num3"> － <input type="text" name="num4">=<br>
+     <input type="text" name="num5"> × <input type="text" name="num6">=<br>
+     <input type="text" name="num7"> ÷ <input type="text" name="num8">=<br>
      <button>送信</button>
     </form>
 </body>
