--- a/src/main/resources/templates/result-calculate-scope.html
+++ b/src/main/resources/templates/result-calculate-scope.html
@@ -6,10 +6,10 @@
     <title>Document</title>
 </head>
 <body>
-    <span th:text="${num1}">dummy</span>+<span th:text="${num2}">dummy</span>=<span th:text="${result}">dummy</span><br>
-    <span th:text="${num3}">dummy</span>‐<span th:text="${num4}">dummy</span>=<span th:text="${result2}">dummy</span><br>
-    <span th:text="${num5}">dummy</span>×<span th:text="${num6}">dummy</span>=<span th:text="${result3}">dummy</span><br>
-    <span th:text="${num7}">dummy</span>÷<span th:text="${num8}">dummy</span>=<span th:text="${result4}">dummy</span><br>
+    <span th:text="${num1}">dummy</span> + <span th:text="${num2}">dummy</span> = <span th:text="${result}">dummy</span><br>
+    <span th:text="${num3}">dummy</span> － <span th:text="${num4}">dummy</span> = <span th:text="${result2}">dummy</span><br>
+    <span th:text="${num5}">dummy</span> × <span th:text="${num6}">dummy</span> = <span th:text="${result3}">dummy</span><br>
+    <span th:text="${num7}">dummy</span> ÷ <span th:text="${num8}">dummy</span> = <span th:text="${result4}">dummy</span><br>
     <form th:action="@{/requestCalculate}" method="post">
     <button>戻る</button></form>
 </body>
